--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">Trending_app</string>
+    <string name="app_name">Trending App</string>
 
-    <string name="error_text">Data not found</string>
     <string name="something_wrong_text">Something went wrong..</string>
     <string name="internet_connection_text">An alien is probably blocking your signal.</string>
     <string name="trending_text">Trending</string>
